# ntc-templates

./: .bandit.yml  .dockerignore  .flake8  .github_changelog_generator  .gitignore  .gitlab-ci.yml  .pydocstyle.ini  .readthedocs.yml  .travis.yml  .vale.ini  .yamllint  .yamllint.yml  CHANGELOG  CHANGELOG.md  Dockerfile  HISTORY.rst  LICENSE  MANIFEST.in  Pipfile  README.md  alcatel_sros_ping.textfsm  arista_eos_show_interfaces_transceiver_hardware_01.raw  arista_eos_show_ip_access-lists.template  arista_eos_show_ip_bgp_summary_test  arista_eos_show_lldp_neighbors.template  arista_eos_show_lldp_neighbors_detail_test  arista_eos_show_mlag.template  changes_for_4.md  changes_for_5.md  cisco_ios_dir.template  cisco_ios_show_clock.template  cisco_ios_show_interfaces_description.textfsm  cisco_ios_show_ip_arp.template  cisco_ios_show_ip_bgp.template  cisco_ios_show_ip_int_brief.template  cisco_ios_show_lldp_neighbors.template  cisco_ios_show_processes_cpu.template  cisco_ios_show_spanning-tree.template  cisco_ios_show_version.template  cisco_nxos_show_access-lists.template  (+28 more)
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml
docs/: index.md  requirements.txt
docs/admin/: install.md  uninstall.md  upgrade.md
docs/assets/: extra.css
docs/dev/: contributing.md  data_model.md  dev_environment.md  dev_parser.md  extending.md  template-major-release.md
docs/user/: faq.md  lib_getting_started.md  lib_overview.md  lib_use_cases.md
helpers/: create-parsed.yml  make-parsed.j2  sort-template-index
lib/ntc_templates/: __init__.py  parse.py
ntc-templates/templates/: aruba_os_show_arp.textfsm  index
ntc_templates/: __init__.py  cisco_ios_show_cdp_neighbors.template  cisco_ios_show_interface_transceiver.template  cisco_ios_show_interfaces.template  cisco_ios_show_interfaces_status.template  cisco_ios_show_ip_bgp_summary.template  cisco_ios_show_ip_ospf_neighbor.template  cisco_ios_show_mac-address-table.template  cisco_ios_show_snmp_community.template  cisco_ios_show_standby_brief.template  cisco_ios_show_vlan.template  cisco_ios_show_vtp_status.template  cisco_nxos_show_interface_brief.template  cisco_nxos_show_ip_ospf_neighbor_vrf.template  index  juniper_show_interfaces.template  parse.py
ntc_templates/templates/: .nfs0000000000d27d67000016c3  aethra_atosnt_show_ip_routemap_work.textfsm  alcatel_aos_show_chassis.textfsm  alcatel_aos_show_interfaces.textfsm  alcatel_aos_show_interfaces_alias.textfsm  alcatel_aos_show_interfaces_ethernet.textfsm  alcatel_aos_show_interfaces_port.textfsm  alcatel_aos_show_interfaces_status.textfsm  alcatel_aos_show_linkagg_alias.textfsm  alcatel_aos_show_linkagg_port.textfsm  alcatel_aos_show_lldp_remote-system.textfsm  alcatel_aos_show_mac-address-table.textfsm  alcatel_aos_show_port-security.textfsm  alcatel_aos_show_system.textfsm  alcatel_aos_show_vlan.textfsm  alcatel_aos_show_vlan_port.textfsm  alcatel_sros_oam_mac-ping.textfsm  alcatel_sros_ping.textfsm  alcatel_sros_ping_rapid.textfsm  alcatel_sros_show_lag.textfsm  alcatel_sros_show_lag_port.textfsm  alcatel_sros_show_mda.textfsm  alcatel_sros_show_port.textfsm  alcatel_sros_show_port_description.textfsm  alcatel_sros_show_router_bgp_neighbor.textfsm  alcatel_sros_show_router_bgp_routes_vpn-ipv4.textfsm  alcatel_sros_show_router_interface.textfsm  alcatel_sros_show_router_isis_adjacency.textfsm  alcatel_sros_show_router_isis_interface.textfsm  alcatel_sros_show_router_mpls_lsp.textfsm  alcatel_sros_show_router_ospf_interface.textfsm  alcatel_sros_show_router_route-table_summary.textfsm  alcatel_sros_show_service_id_0_sap.textfsm  alcatel_sros_show_service_id_interface.textfsm  alcatel_sros_show_service_sap-using.textfsm  alcatel_sros_show_service_sdp-using.textfsm  (+1226 more)
show_bgp_vrf_all_ipv4_unicast_neighbors/: cisco_nxos_show_bgp_vrf_all_ipv4_unicast_neighbors2.yml
templates/: alcatel_aos_show_vlan.template  alcatel_sros_oam_mac-ping.textfsm  alcatel_sros_oam_mac_ping.template  alcatel_sros_ping.textfsm  alcatel_sros_show_router_bgp_routes_vpn-ipv4.textfsm  alcatel_sros_show_router_bgp_summary_family.textfsm  alcatel_sros_show_router_ldp_interface.textfsm  alcatel_sros_show_router_mpls_interface.textfsm  alcatel_sros_show_router_pim_interface.textfsm  alcatel_sros_show_router_rsvp_interface.textfsm  alcatel_sros_show_service_id_base.template  alcatel_sros_show_service_id_base.textfsm  alcatel_sros_show_service_sdp.textfsm  arista_eos_bash_df_-h.template  arista_eos_dir_flash.template  arista_eos_dir_flash.textfsm  arista_eos_show_bgp_evpn_summary  arista_eos_show_boot-config.template  arista_eos_show_environment_cooling.template  arista_eos_show_environment_temperature.template  arista_eos_show_hardware_counter_drop.template  arista_eos_show_interfaces.template  arista_eos_show_interfaces.textfsm  arista_eos_show_interfaces_counters_queue_detail_grep_egress.template  arista_eos_show_interfaces_status.template  arista_eos_show_interfaces_transceiver.template  arista_eos_show_interfaces_transceiver.textfsm  arista_eos_show_interfaces_transceiver_detail.template  arista_eos_show_inventory.template  arista_eos_show_inventory.textfsm  arista_eos_show_ip_arp.textfsm  arista_eos_show_ip_bgp_peers.template  arista_eos_show_ip_bgp_summary.template  arista_eos_show_ip_bgp_summary_vrf.template  arista_eos_show_ip_helper-address.template  arista_eos_show_ip_helper-address.textfsm  arista_eos_show_ip_ospf_database.template  arista_eos_show_ip_route.template  arista_eos_show_ip_route.textfsm  arista_eos_show_ip_route_vrf.template  (+640 more)
tests/: __init__.py  alcatel_sros_oam_mac_ping.parsed  alcatel_sros_show_service_id_base.parsed  dell_powerconnect_show_mac_address-table.raw  ntc_template_test_helper.py  test_capture_group.py  test_capture_group_case.py  test_development_scripts.py  test_index_load.py  test_index_order.py  test_structured_data_against_parsed_reference_files.py  test_tasks.py  test_testcases_exists.py  test_var_names.py
(+5300 files in other folders)
