[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ntc_templates"
version = "3.1.0"
description = "TextFSM Templates for Network Devices, and Python wrapper for TextFSM's CliTable."
authors = ["Network to Code <info@networktocode.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/networktocode/ntc-templates"

[tool.poetry.dependencies]
python = "^3.6"
textfsm = "^1.1.0"

[tool.poetry.dev-dependencies]
tox = "*"
yamllint = "*"
black = {version="*", python=">3.6.2"}
pytest = "*"
"ruamel.yaml" = "*"
flake8 = "*"

[tool.poetry.extras]
test = ["pytest"]

[tool.black]
line-length = 90
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
| test-templates\.py
'''
